fix twitter & insta margin on mobile

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -280,3 +280,15 @@
 .videos .content .inherited-shortcode-iframe {
     display: none;
 }
+
+@media only screen and (max-width: 600px) {
+    .article-container,
+    .single-videos {
+        .content {
+            .instagram-media, .twitter-tweet {
+                margin: 2rem 1rem !important;
+                width: 100% !important;
+            }
+        }
+    }
+}
